# embedded

./: .gitignore
3Dprint/FanStand/: FanStand.FCStd
3Dprint/M2nut/: M2nut.FCStd  M2nut.stl
3Dprint/M3nut/: M3nut.FCStd
3Dprint/RelayBox/: Lid.stl  RelayBox.FCStd  RelayBox.stl
3Dprint/SoapSpike/: SoapSpike.FCStd  SoapSpike.stl
3Dprint/SoftStart/: SlowStart.FCStd  box.stl  lid.stl
3Dprint/clock/: clock.FCStd  clock.stl  lid.stl
3Dprint/cup/: cup.FCStd  cup.stl
3Dprint/dongle/: dongle.FCStd  dongle.stl
3Dprint/extractor/: extractor.FCStd  extractor.stl
3Dprint/funnel/: funnel.FCStd  funnel.stl
3Dprint/hook/: hook-Body.stl  hook-Cylinder.stl  hook.FCStd
3Dprint/ledstrip/: ledstrip-Box.stl  ledstrip-Lid.stl  ledstrip.FCStd
3Dprint/meetup/: meetup-Body.stl  meetup.FCStd
3Dprint/oval/: oval-Body.stl  oval.FCStd
3Dprint/pool/: pool.FCStd  (+1 more)
NetAlarm/: Makefile  _myvimrc  run_tests.sh
Receive433/: Receive433.ino
ReedSwitch/: ReedSwitch.ino
esp8266/: dalarm.py  main.py
nrf52840/: .gitignore  nrf52840.dtsi  nrf52840_qiaa.dtsi  nrf52840dongle_nrf52840.dts
nrf52840/peripheral_ht/: CMakeLists.txt  README.rst  build.bat  clean.bat  env.bat  flash.bat  flash_jlink.bat  menuconfig.bat  pristine.bat  prj.conf  reset.bat  rmbuild.bat  sample.yaml  workspace.code-workspace
nrf52840/peripheral_ht/boards/: nrf52dk_nrf52832.conf
nrf52840/peripheral_ht/src/: Arduino.c  Arduino.h  MAX31856.cpp  MAX31856.h  hts.c  hts.h  main.c  maxik.cpp  maxik.h  thermo.c  thermo.h
pir/: pir.ino
spice/: BatCutoff.asc  lcfilter.asc  protection.asc
udp/: udp.ino
(+354 files in other folders)
